<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">Clear</string>
    <string name="print_time_first">1m 45s</string>
    <string name="print_time_second">3m 2s</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="result">Result</string>
    <string name="exit">Выход</string>
    <string name="clean">Очистить</string>
    <string name="error">=Ошибка</string>
    <string name="_0">0</string>
    <string name="_eq0">=0</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="ost">%</string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multi">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtr">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sum">+</string>
    <string name="zero">0</string>
    <string name="wzero">00</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>